changes to layout

--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -13,7 +13,7 @@
         </a>
     </li> 
      <li>
-        <a class="" href="/Account/Task/">
+        <a class="" href="/Task/">
             <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_Tasks
         </a>
     </li>   
