--- a/totalhr.web/Views/Task/Search.cshtml
+++ b/totalhr.web/Views/Task/Search.cshtml
@@ -1,92 +1,143 @@
 ﻿@model totalhr.web.ViewModels.TaskSchedulerSearchVm
 
+@using totalhr.Resources
+@using TH = totalhr.web.Helpers;
+@using AH = totalhr.web.Areas.Admin.Helpers;
+@using AM = totalhr.web.Areas.Admin.Models;
+
 @{
-    ViewBag.Title = "Search Tasks";
+    ViewBag.Title = Task.V_Search_Taks;
+
+    var breadCrumbItems = new List<AM.BreadCrumbItem>
+    {
+        new AM.BreadCrumbItem{Url = "/Task/", Text = Task.V_Task_Scheduler, Title= Task.V_Task_Scheduler},
+        new AM.BreadCrumbItem{Url = "", Text = Task.V_Search_Taks, Title= Task.V_Search_Taks}
+    };
+
+  
 }
 
-<h2>Search Tasks</h2>
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-    <fieldset>
-        <legend>
-            Search Task Recordings
-        </legend>
-        <table>
-            <tr>
-                <td>
-                    Id: @Html.TextBoxFor(x => x.Id)
-                </td>
-                <td>
-                    Name: @Html.TextBoxFor(x => x.Name)
-                </td>
-                <td>
-                    AssignedBy: @Html.DropDownListFor(x => x.AssignedBy, Model.UserList)
-                </td>
-                <td>
-                    AssignedTo: @Html.DropDownListFor(x => x.AssignedTo, Model.UserList)
-                </td>
-                <td>
-                    Number of Results: @Html.TextBoxFor(x => x.PageSize)
-                </td>
-                <td>
-                    <input type="submit" value="Submit" />
-                </td>
-            </tr>
-        </table>
-    </fieldset>
+@section pagetitle{
+   @Task.V_Search_Taks
 }
 
-@if (Model.Results != null)
-{
-    <table>
-        <tr>
-            <td>
-                ID
-            </td>
-            <td>
-                Name
-            </td>
-            <td>
-                Description
-            </td>
-            <td>
-                Assigned By
-            </td>
-            <td>
-                Assigned To
-            </td>
-            <td>
-                Department
-            </td>
-        </tr>
-        @foreach (var result in Model.Results)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(x => result.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(x => result.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(x => result.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(x => result.AssignedByUser)
-                </td>
-                <td>
-                    @Html.DisplayFor(x => result.AssignedToUser)
-                </td>
-                <td>
-                    @Html.DisplayFor(x => result.Department)
-                </td>
-                <td>@Html.ActionLink("Details", "Details", new { id = result.Id }) </td>
-            </tr>
-        }
-    </table>
-
-    <br />
-    @Html.ActionLink("Back to Home", "Index", "Task")
+@section breadcrumb{
+    @Html.Raw(AH.GenericHelper.MakeBreadCrumb(breadCrumbItems))
 }
+
+
+<div class="row-fluid">
+     <div class="widget">
+        <div class="widget-title">
+            <h4><i class="icon-reorder"></i> @Task.V_Search_Details</h4>
+            <span class="tools">
+                <a href="javascript:;" class="icon-chevron-down"></a>
+            </span>
+        </div>
+        <div class="widget-body">
+
+            @using (Html.BeginForm("Search", "Task", FormMethod.Post, new { @id="frmSearch" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
+
+                
+                    <p>@Task.V_Enter_Criteria</p>
+                   
+                    <table >
+                        <tr>
+                            <td>
+                                @Task.V_Task_Id: @Html.TextBoxFor(x => x.Id)
+                            </td>
+                            <td>
+                                @Task.V_Task_Name: @Html.TextBoxFor(x => x.Name)
+                            </td>                        
+                            <td>
+                                @Task.V_Assigned_By: @Html.DropDownListFor(x => x.AssignedBy, Model.UserList)
+                            </td>
+                            <td>
+                                @Task.V_Assigned_To : @Html.DropDownListFor(x => x.AssignedTo, Model.UserList)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                @Task.V_No_Of_Results: @Html.TextBoxFor(x => x.PageSize, new { @style="width:50px" })
+                            </td>
+                            <td colspan="3">
+                                 <button type="submit" class="btn btn-info" onclick="$('#frmSearch').submit();">
+                                    <i class="icon-plus icon-white"></i> @Task.V_Search
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
+            }
+          </div>
+     </div>
+</div>
+
+<div class="row-fluid">
+     <div class="widget">
+        <div class="widget-title">
+            <h4><i class="icon-reorder"></i> @Task.V_Task_Search_Result</h4>
+            <span class="tools">
+                <a href="javascript:;" class="icon-chevron-down"></a>
+            </span>
+        </div>
+        <div class="widget-body">
+            @if (Model.Results != null)
+            {
+                <table class="table table-striped table-bordered table-advance table-hover">
+                    <tr>
+                        <th>
+                            @Task.V_Task_Id
+                        </th>
+                        <th>
+                            @Task.V_Task_Name
+                        </th>
+                        <th>
+                            @Task.V_Description
+                        </th>
+                        <th>
+                            @Task.V_Assigned_By
+                        </th>
+                        <th>
+                            @Task.V_Assigned_To
+                        </th>
+                        <th>
+                            @Task.V_Department
+                        </th>
+                    </tr>
+                    @foreach (var result in Model.Results)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(x => result.Id)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(x => result.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(x => result.Description)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(x => result.AssignedByUser)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(x => result.AssignedToUser)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(x => result.Department)
+                            </td>
+                            <td>@Html.ActionLink("Details", "Details", new { id = result.Id }) </td>
+                        </tr>
+                    }
+                </table>
+
+                <br />
+                <div class="form-actions">
+                    <button type="button" class="btn btn-danger" onclick="NavigateTo('/Task/');"><i class="icon-remove icon-white"></i> @Task.V_Back_To_Task_Home</button>
+                </div>  
+            }
+        </div>
+    </div>
+</div>
