--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -8,7 +8,7 @@
         </a>
     </li>
      <li>
-        <a class="" href="/Account/Payroll/">
+        <a class="" href="/Payroll/">
             <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_Payroll
         </a>
     </li> 
