Update for file upload

--- a/totalhr.web/Views/Account/MyDetails.cshtml
+++ b/totalhr.web/Views/Account/MyDetails.cshtml
@@ -61,7 +61,7 @@
                     <img src="/Employee/Profile/Picture/@(Model.UserProfilePicture != null? Model.UserProfilePicture.FileId + ".ext" : "profile-pic.jpg")" />
                 </div>
                 <ul class="nav nav-tabs nav-stacked">
-                    <li><a href="javascript:void(0)" onclick="OpenPopup('/File/UploadFile/', 600, 600, true)"><i class="icon-picture"></i> Update Picture</a></li>
+                    <li><a href="javascript:void(0)" onclick="OpenPopup('/File/UploadProfilePicture/', 600, 600, true)"><i class="icon-picture"></i> Update Picture</a></li>
                     <li><a href="javascript:void(0)"><i class="icon-paper-clip"></i> Avatar</a></li>                    
                 </ul>
               
